@@ -1,3 +1,14 @@
+2007-01-05 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b41
+
+ * Fix: yui sub album tree on startpage was broken for Opera an IE.
+
+ * Change: Only create expensive subalbumtree if wanted and theme
+		   is not matrix
+
+ * Change: Only load expensive yui JS for subalbumtree if a tree is present.
+
+ * Change: Move createTreeArray() from lib/content to lib/album
+
 2007-01-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b40
 
  * Change: Update Copyright to 2007
